--- a/index.html
+++ b/index.html
@@ -6,8 +6,25 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Виртуальный тур по НГТУ им Р. Е. Алексеева</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    hello
+    <header class="header">
+        <img class="header__logo" src="static/ngtuLogo.png" alt="Логотип" srcset="">
+        <span class="header__title">НИЖЕГОРОДСКИЙ ГОСУДАРСТВЕННЫЙ ТЕХНИЧЕСКИЙ УНИВЕРСИТЕТ им. Р.Е. Алексеева</span>
+    </header>
+    <section class="welcome">
+        <div class="container">
+            <div class="big-title">
+                <div class="big-title__text col-md-8">
+                    <span class="big-title__decoration">|</span>
+                    <h1 class="big-title__h1">VR-тур по шестому корпусу</h1>
+                </div>
+                <img class="big-title__image col-md-4" src="static/ngtuBuilding6.png">
+            </div>
+        </div>
+    </section>
 </body>
 </html>
