added image paddings for adaptive to mobile

--- a/index.html
+++ b/index.html
@@ -28,7 +28,9 @@
                     <span class="big-title__decoration">|</span>
                     <h1 class="big-title__h1">VR-тур по шестому корпусу</h1>
                 </div>
-                <img class="big-title__image col-md-4" src="static/ngtuBuilding6.png">
+                <div class="col-md-4">
+                    <img class="big-title__image" src="static/ngtuBuilding6.png">
+                </div>
             </div>
         </div>
     </section>
