--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
                 </div>
             </div>
         </div>
+        <img class="welcome__girl-illustration" src="static/girl.png" alt="illustration">
     </section>
     <div class="vr-content">
         <iframe src="output/index.html" class="vr-content-1"></iframe>
