almost finished section 1

--- a/index.html
+++ b/index.html
@@ -25,31 +25,31 @@
     <section class="welcome">
         <div class="container">
             <div class="big-title">
-                <div class="big-title__text col-md-8">
+                <div class="big-title__text col-md-9">
                     <span class="big-title__decoration">|</span>
                     <h1 class="big-title__h1">VR-тур по шестому корпусу</h1>
                 </div>
-                <div class="col-md-4">
+                <div class="col-md-3">
                     <img class="big-title__image" src="static/ngtuBuilding6.png">
                 </div>
             </div>
         </div>
         <div class="welcome__second-row">
-            <div class="welcome__menu col-md-6">
+            <div class="welcome__menu col-md-8">
                 <span class="welcome__menu-text">
                     Выберете место, которое хотите посетить:
                 </span>
                 <div class="welcome__dropdown" onclick="showDropdown()">
                     <img class="welcome__dropdown-arrow" src="static/arrowDown.svg" alt="arrow" srcset="">
                     <div class="welcome_dropdown-content">
-                        <a href="404NOREFERENCEERROR">МФЗ</a>
-                        <a href="404NOREFERENCEERROR">Спорт. зал 6 к.</a>
-                        <a href="404NOREFERENCEERROR">ИЦАЭ</a>
-                        <a href="404NOREFERENCEERROR">Школа хакатонщиков</a>
+                        <a class="welcome__dropdown-link" href="404NOREFERENCEERROR">МФЗ</a>
+                        <a class="welcome__dropdown-link" href="404NOREFERENCEERROR">Спорт. зал 6 к.</a>
+                        <a class="welcome__dropdown-link" href="404NOREFERENCEERROR">ИЦАЭ</a>
+                        <a class="welcome__dropdown-link" href="404NOREFERENCEERROR">Школа хакатонщиков</a>
                     </div>
                 </div>
             </div>
-            <div class="welcome__illustration col-md-6">
+            <div class="welcome__illustration col-md-4">
                 <img class="welcome__girl-illustration" src="static/girl.png" alt="illustration">
             </div>
         </div>
