almost finished about us

--- a/index.html
+++ b/index.html
@@ -54,6 +54,24 @@
             </div>
         </div>
     </section>
+    <section class="about-us">
+        <div class="container">
+            <div class="section-header">
+                <h2 class="section-header__text">О нас</h2>
+                <div class="section__line"></div>
+            </div>
+            <div class="about-us__content">
+                <pre class="about-us__text col-md-6">
+                    Волкова Анастасия - тимлид
+                    Кисляев Сергей - верстальщик
+                    Горбунова Елизавета - дизайнер
+                    Кобяков Федор - верстальщик</pre>
+                <div class="about-us__image-container col-md-6">
+                    <img class="about-us__image" src="static/we.jpeg" alt="we" srcset="">
+                </div>
+            </div>
+        </div>
+    </section>
     <div class="vr-content">
         <iframe src="output/index.html" class="vr-content-1"></iframe>
     </div>
