fixed responsibility issues

--- a/index.html
+++ b/index.html
@@ -61,11 +61,13 @@
                 <div class="section__line"></div>
             </div>
             <div class="about-us__content">
-                <pre class="about-us__text col-md-6">
-                    Волкова Анастасия - тимлид
-                    Кисляев Сергей - верстальщик
-                    Горбунова Елизавета - дизайнер
-                    Кобяков Федор - верстальщик</pre>
+                <div class="col-md-6 about-us__text-container">
+                    <pre class="about-us__text">
+Волкова Анастасия - тимлид
+Кисляев Сергей - верстальщик
+Горбунова Елизавета - дизайнер
+Кобяков Федор - верстальщик</pre>
+                    </div>
                 <div class="about-us__image-container col-md-6">
                     <img class="about-us__image" src="static/we.jpeg" alt="we" srcset="">
                 </div>
