--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <div class="big-title">
                 <div class="big-title__text col-md-9">
                     <span class="big-title__decoration">|</span>
-                    <h1 class="big-title__h1">VR-тур по шестому корпусу</h1>
+                    <h1 class="big-title__h1">VR-тур</h1>
                 </div>
                 <div class="col-md-3">
                     <img class="big-title__image" src="static/ngtuBuilding6.png">
