--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
                         <a class="welcome__dropdown-link" href="404NOREFERENCEERROR">Спорт. зал 6 к.</a>
                         <a class="welcome__dropdown-link" href="404NOREFERENCEERROR">ИЦАЭ</a>
                         <a class="welcome__dropdown-link" href="404NOREFERENCEERROR">Школа хакатонщиков</a>
+                        <a class="welcome__dropdown-link" href="#vr">Помещение 4 корпус</a>
                     </div>
                 </div>
             </div>
@@ -75,6 +76,7 @@
         </div>
     </section>
     <div class="vr-content">
+        <a name="vr"></a>
         <iframe src="output/index.html" class="vr-content-1"></iframe>
     </div>
 </body>
