added blue spot

--- a/index.html
+++ b/index.html
@@ -19,23 +19,27 @@
 </head>
 <body>
     <header class="header">
+        <img class="blue-spot" src="static/blueSpot.png" alt="blueSpot" srcset="">
         <img class="header__logo" src="static/ngtuLogo.png" alt="Логотип" srcset="">
         <span class="header__title">НИЖЕГОРОДСКИЙ ГОСУДАРСТВЕННЫЙ ТЕХНИЧЕСКИЙ УНИВЕРСИТЕТ им. Р.Е. Алексеева</span>
     </header>
     <section class="welcome">
         <div class="container">
+            <!-- <div class="welcome__background-text-container">
+                <span class="welcome__background-text">VIRTUAL TOUR</span>
+            </div> -->
             <div class="big-title">
                 <div class="big-title__text col-md-7">
                     <span class="big-title__decoration">|</span>
                     <h1 class="big-title__h1">VR-тур</h1>
                 </div>
-                <div class="col-md-5">
+                <!-- <div class="col-md-5">
                     <img class="big-title__image" src="static/ngtuBuilding6.png">
-                </div>
+                </div> -->
             </div>
         </div>
         <div class="welcome__second-row">
-            <div class="welcome__menu col-md-8">
+            <div class="welcome__menu col-md-6 col-xl-7">
                 <span class="welcome__menu-text">
                     Выберете место, которое хотите посетить:
                 </span>
@@ -50,7 +54,7 @@
                     </div>
                 </div>
             </div>
-            <div class="welcome__illustration col-md-4">
+            <div class="welcome__illustration col-md-6 col-xl-5">
                 <img class="welcome__girl-illustration" src="static/girl.png" alt="illustration">
             </div>
         </div>
