added new col breakpoints for image and dropdown + installed font

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         });
     </script>
     <script src="index.js"></script> 
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap" rel="stylesheet">
 </head>
 <body>
     <header class="header">
@@ -25,9 +26,12 @@
     </header>
     <section class="welcome">
         <div class="container">
-            <!-- <div class="welcome__background-text-container">
-                <span class="welcome__background-text">VIRTUAL TOUR</span>
-            </div> -->
+            <div class="welcome__background-text-container welcome_bg-position1">
+                <span class="welcome__background-text">VIRTUAL</span>
+            </div>
+            <div class="welcome__background-text-container welcome_bg-position2">
+                <span class="welcome__background-text">TOUR</span>
+            </div>
             <div class="big-title">
                 <div class="big-title__text col-md-7">
                     <span class="big-title__decoration">|</span>
@@ -39,7 +43,7 @@
             </div>
         </div>
         <div class="welcome__second-row">
-            <div class="welcome__menu col-md-6 col-xl-7">
+            <div class="welcome__menu col-md-6 col-xl-7 col-xxl-8">
                 <span class="welcome__menu-text">
                     Выберете место, которое хотите посетить:
                 </span>
@@ -54,7 +58,7 @@
                     </div>
                 </div>
             </div>
-            <div class="welcome__illustration col-md-6 col-xl-5">
+            <div class="welcome__illustration col-md-6 col-xl-5 col-xxl-4">
                 <img class="welcome__girl-illustration" src="static/girl.png" alt="illustration">
             </div>
         </div>
