--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         });
     </script>
     <script src="index.js"></script> 
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap" rel="stylesheet">
+    <!-- <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap" rel="stylesheet"> -->
 </head>
 <body>
     <header class="header">
