changed about us text

--- a/index.html
+++ b/index.html
@@ -72,8 +72,8 @@
             <div class="about-us__content">
                 <div class="col-md-6 about-us__text-container">
                     <pre class="about-us__text">
-Волкова Анастасия - тимлид
-Кисляев Сергей - верстальщик
+Волкова Анастасия - Team lead
+Кисляев Сергей - разработчик виртуального тура
 Горбунова Елизавета - дизайнер
 Кобяков Федор - верстальщик</pre>
                     </div>
