set font and go up button

--- a/index.html
+++ b/index.html
@@ -16,9 +16,15 @@
         });
     </script>
     <script src="index.js"></script> 
-    <!-- <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap" rel="stylesheet"> -->
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap" rel="stylesheet">
 </head>
 <body>
+    <a name="top"></a>
+    <div class="go-up-button-container">
+        <a href="#top">
+            <img class="go-up-button" src="static/arrowUp.svg" alt="go up">
+        </a>
+    </div>
     <header class="header">
         <img class="blue-spot" src="static/blueSpot.png" alt="blueSpot" srcset="">
         <img class="header__logo" src="static/ngtuLogo.png" alt="Логотип" srcset="">
